<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/appWidgetBackgroundColor"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.SensorsApp.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sensor Widget"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sensor_name_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/sensor_vendor_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_vendor"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/sensor_version_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_version"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/sensor_type_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_type"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/sensor_power_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_power"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/sensor_maxrange_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_maxrange"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold|italic"/>

    </LinearLayout>
</LinearLayout>