<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SensorFragment">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical" >-->
<!---->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Information:"-->
<!--            android:textColor="@color/purple_500"-->
<!--            android:textSize="30dp"-->
<!--            android:textStyle="bold"-->
<!--            android:fontFamily="serif"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_marginTop="30dp"/>-->
<!---->
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/customborder"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/sensor_name_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/sensor_vendor_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_vendor"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/sensor_version_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_version"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/sensor_type_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_type"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/sensor_power_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_power"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/sensor_maxrange_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_maxrange"
            android:textColor="@color/white"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="240dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <com.example.sensorsapp.DiagramView
            android:id="@+id/diagram_bar_1"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            app:color="@color/design_default_color_error" />

        <com.example.sensorsapp.DiagramView
            android:id="@+id/diagram_bar_2"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            app:color="@android:color/holo_orange_dark" />

        <com.example.sensorsapp.DiagramView
            android:id="@+id/diagram_bar_3"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            app:color="@android:color/holo_green_dark" />

        <com.example.sensorsapp.DiagramView
            android:id="@+id/diagram_bar_4"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            app:color="@android:color/holo_blue_light" />


        <TextView
            android:id="@+id/sensor_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="Sensor Values:"
            android:textColor="@color/purple_700" />



    </LinearLayout>


</FrameLayout>